tests/fail/never_transmute_void.stderr
error: Undefined Behavior: entering unreachable code
  --> $DIR/never_transmute_void.rs:LL:CC
   |
LL |         match v.0 {}
   |               ^^^ entering unreachable code
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `m::f` at $DIR/never_transmute_void.rs:LL:CC
note: inside `main` at $DIR/never_transmute_void.rs:LL:CC
  --> $DIR/never_transmute_void.rs:LL:CC
   |
LL |     m::f(v);
   |     ^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

